--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-<h2>Testar</h2>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TWEUG - Rapportmallar</title>
+    <link rel="stylesheet" href="https://matdah.github.io/css-template/miun-styles.css">
+</head>
+
+<body>
+    <div id="container">
+        <h1>Rapportskrivning</h1>
+
+        <p>Mittuniversitetet har en rapportmall tänk att använda för tekniska rapporter i Webbutvecklings-programmet
+            (<strong>Dessa mallar skall ej användas för andra program på universitet, eller på andra
+                lärosäten</strong>).<br>
+            En inspelad föreläsning av Ulf Jennehag om hur denna mall används, samt rapportskrivning rent generellt,
+            finns här under:</p>
+
+        <div class="demovid">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xi4XEXJHdqE" frameborder="0"
+                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+
+        <h2>Rapportmallar</h2>
+
+        <p>Nedan finns rapportmallar för tekniska rapporter tänkta att användas till både inlämningsuppgifter,
+            projektrapporter samt rapport för självständigt arbete (det som brukar kallas "examensarbete").<br>
+            När du börjar skriva rapporter för projektrapporter och laborationer - kika på de mindre varienterna en bit
+            ner på sidan, och välj den som passar bäst för uppgiften. Överst ligger rapportmall för självständigt
+            arbete, vilket vanligtvis kommer i slutet av din utbildning - de ligger överst i och med att de innehåller
+            beskrivande texter om rapportskrivning och rapportmallen.
+        </p>
+        <p>Rapportmallen finns i Open Offie- eller Word-format (BETA).</p>
+        <p>Rapporter i odt-format (Open office) och fungerar bäst i antingen <a href="http://www.libreoffice.org/"
+                target="_blank">Libre Office</a> eller <a href="https://www.openoffice.org/sv/" target="_blank">Open
+                Office</a></p>
+        <p>
+            Du kan installera Office-paketet (vilket inkluderar Word) från ditt Office 365-konto.
+        </p>
+
+        <p>&nbsp;</p>
+        <h3 id="laborationer">Rapportmall för laborationer</h3>
+        <p>Enklare rapportmallar för laborationsmoment.
+            <br>Ska du beskriva något praktiskt, använd den översta. Ska du
+            besvara frågor använd den nedre.
+        </p>
+        <h5>Microsoft Word</h5>
+        <ul>
+            <li><a href="MallTekniskaRapporterMIUN_labb.docx" target="_blank">Laborationsrapport - praktisk
+                    laboration</a></li>
+            <li><a href="MallTekniskaRapporterMIUN_labbteori.docx" target="_blank">Laborationsrapport - svar på
+                    teorifrågor</a></li>
+        </ul>
+
+        <h5>Open Office</h5>
+        <ul>
+            <li><a href="MallTekniskaRapporterMIUN_labb.odt" target="_blank">Laborationsrapport - praktisk
+                    laboration</a></li>
+            <li><a href="MallTekniskaRapporterMIUN_labbteori.odt" target="_blank">Laborationsrapport - svar på
+                    teorifrågor</a></li>
+        </ul>
+
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <h3 id="projekt">Rapportmall för projektuppgifter</h3>
+        <p>Rapportmall för avslutande projektuppgift i kurser som avslutas med ett praktiskt projekt.</p>
+
+        <h5>Microsoft Word</h5>
+        <ul>
+            <li><a href="MallTekniskaRapporterMIUN_projekt.docx" target="_blank">Rapportmall för projektuppgift -
+                    Svenska</a></li>
+            <li><a href="MallTekniskaRapporterMIUN_projekt_v2.docx" target="_blank">Rapportmall för projektuppgift -
+                    Svenska</a> (förenklad utan instruktioner)</li>
+        </ul>
+
+        <h5>Open Office</h5>
+        <ul>
+            <li><a href="MallTekniskaRapporterMIUN_projekt.odt" target="_blank">Rapportmall för projektuppgift -
+                    Svenska</a></li>
+            <li><a href="MallTekniskaRapporterMIUN_projekt_v2.odt" target="_blank">Rapportmall för projektuppgift -
+                    Svenska</a> (förenklad utan instruktioner)</li>
+        </ul>
+
+        <div style="height: 5em;"></div>
+
+        <footer>
+            <p>Av Mattias Dahlgren. E-post: <a href="mailto:mattias.dahlgren@miun.se">mattias.dahlgren@miun.se</a>.</p>
+        </footer>
+    </div>
+    <!-- /.container -->
+</body>
+
+</html>
