Länk till info om programvaror

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 target="_blank">Libre Office</a> eller <a href="https://www.openoffice.org/sv/" target="_blank">Open
                 Office</a></p>
         <p>
-            Du kan installera Office-paketet (vilket inkluderar Word) från ditt Office 365-konto.
+            Du kan installera Office-paketet (vilket inkluderar Word) från ditt Office 365-konto.<br>
+            Se mer information här: <a href="https://www.miun.se/student/studentstod/it-tjanster/programvaror/"
+                target="_blank">Programvaror för studenter</a>.
         </p>
 
         <p>&nbsp;</p>
@@ -63,7 +65,6 @@
                     teorifrågor</a></li>
         </ul>
 
-        <p>&nbsp;</p>
         <p>&nbsp;</p>
         <h3 id="projekt">Rapportmall för projektuppgifter</h3>
         <p>Rapportmall för avslutande projektuppgift i kurser som avslutas med ett praktiskt projekt.</p>
