Justerar lite i informationen

--- a/index.html
+++ b/index.html
@@ -41,8 +41,27 @@
 
         <h2>Rapportmallar</h2>
 
-        <p>Nedan finns rapportmallar för tekniska rapporter tänkta att användas till både inlämningsuppgifter,
-            projektrapporter samt rapport för självständigt arbete (det som brukar kallas "examensarbete").<br>
+        <p>Nedan finns rapportmallar för tekniska rapporter tänkta att användas till både inlämningsuppgifter och
+            projektrapporter.<br>
+        </p>
+        <h3>Information om rapport-skrivande</h3>
+        <p>Börja med att kika på en stor variant av rapportmallen, som innehåller information om hur denna används, men
+            instruktioner att infoga illustrationer, källförteckning med mera.<br>
+            Du hittar denna här under: </p>
+        <h4>Microsoft Word</h4>
+        <ul>
+            <li><a href="MallTekniskaRapporterMIUN_projekt.docx" target="_blank">Rapportmall -
+                    Med instruktioner</a></li>
+        </ul>
+
+        <h4>Open Office</h4>
+        <ul>
+            <li><a href="MallTekniskaRapporterMIUN_projekt.odt" target="_blank">Rapportmall -
+                    Med instruktioner</a></li>
+        </ul>
+
+        <h3>Att välja rapportmall</h3>
+        <p>
             När du börjar skriva rapporter för projektrapporter och laborationer - kika på de mindre varienterna en bit
             ner på sidan, och välj den som passar bäst för uppgiften. Överst ligger rapportmall för självständigt
             arbete, vilket vanligtvis kommer i slutet av din utbildning - de ligger överst i och med att de innehåller
@@ -103,7 +122,7 @@
         <div style="height: 5em;"></div>
 
         <footer>
-            <p>Av Mattias Dahlgren. E-post: <a href="mailto:mattias.dahlgren@miun.se">mattias.dahlgren@miun.se</a>.</p>
+            <p>Vid frågor om rapportmallar - kontakta lärare för aktuell kurs.</p>
         </footer>
     </div>
     <!-- /.container -->
