--- a/index.html
+++ b/index.html
@@ -50,13 +50,10 @@
             Du hittar denna här under: </p>
         <h4>Microsoft Word</h4>
         <ul>
-            <li><a href="MallTekniskaRapporterMIUN_projekt.docx" target="_blank">Rapportmall -
+            <li><a href="MallTekniskaRapporterMIUN_projekt.docx" target="_blank">Rapportmall (Word) -
                     Med instruktioner</a></li>
-        </ul>
 
-        <h4>Open Office</h4>
-        <ul>
-            <li><a href="MallTekniskaRapporterMIUN_projekt.odt" target="_blank">Rapportmall -
+            <li><a href="MallTekniskaRapporterMIUN_projekt.odt" target="_blank">Rapportmall (Open/Libre office) -
                     Med instruktioner</a></li>
         </ul>
 
