--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>Börja med att kika på en stor variant av rapportmallen, som innehåller information om hur denna används, men
             instruktioner att infoga illustrationer, källförteckning med mera.<br>
             Du hittar denna här under: </p>
-        <h4>Microsoft Word</h4>
+        <h4>Rapportmall med instruktioner</h4>
         <ul>
             <li><a href="MallTekniskaRapporterMIUN_projekt.docx" target="_blank">Rapportmall (Word) -
                     Med instruktioner</a></li>
