--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
         <h3>Att välja rapportmall</h3>
         <p>
             När du börjar skriva rapporter för projektrapporter och laborationer - kika på de mindre varienterna en bit
-            ner på sidan, och välj den som passar bäst för uppgiften. Överst ligger rapportmall för självständigt
-            arbete, vilket vanligtvis kommer i slutet av din utbildning - de ligger överst i och med att de innehåller
-            beskrivande texter om rapportskrivning och rapportmallen.
+            ner på sidan, och välj den som passar bäst för uppgiften. 
         </p>
         <p>Rapportmallen finns i Open Offie- eller Word-format (BETA).</p>
         <p>Rapporter i odt-format (Open office) och fungerar bäst i antingen <a href="http://www.libreoffice.org/"
