--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             arbete, vilket vanligtvis kommer i slutet av din utbildning - de ligger överst i och med att de innehåller
             beskrivande texter om rapportskrivning och rapportmallen.
         </p>
-        <p>Rapportmallen finns i Open Offie- eller Word-format (BETA).</p>
+        <p>Rapportmallen finns i Open Office- eller Word-format (BETA).</p>
         <p>Rapporter i odt-format (Open office) och fungerar bäst i antingen <a href="http://www.libreoffice.org/"
                 target="_blank">Libre Office</a> eller <a href="https://www.openoffice.org/sv/" target="_blank">Open
                 Office</a></p>
